--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,11 @@ h2 {
   padding: 0px 7px;
 }
 
+.text-cont {
+  width: 500px;
+
+}
+
 .gallery-image {
   border-radius: 5px;
   object-fit: cover;
